syntax = "proto3";

package usermgmt;

//前半部分是go mod init 包名(example.com/go-usermgmt-grpc), 后半部分是文件名称(go_usermgmt_grpc)
option go_package = "example.com/go-usermgmt-grpc;go_usermgmt_grpc";



//命令:  protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative .\usermgmt\usermgmt.proto
service UserManagement{
  rpc CreateNewUser(NewUser) returns (User);
  rpc GetUsers(GetUserParams) returns (UserList){}
}

message NewUser{
  string name = 1;
  int32 age = 2;
}

message User{
  string name = 1;
  int32  age = 2;
  int32  id = 3;
}

message GetUserParams{

}

message UserList{
  repeated User users = 1;
}